fix: header title overflow

--- a/themes/sergiocarracedo/assets/scss/pages/post/_content.scss
+++ b/themes/sergiocarracedo/assets/scss/pages/post/_content.scss
@@ -20,7 +20,6 @@
 
   }
 
-
   img {
     margin: auto;
   }
@@ -127,8 +126,7 @@
   }
 
   code {
-    background: rgba(99, 99, 99, 0.07);
-    color: #ef459c;
+    color: var(--primary-color);
     padding: 1px 2px;
     border-radius: 2px;
     word-wrap: break-word;
@@ -137,6 +135,11 @@
   pre {
     scrollbar-color: $white transparent;
     scrollbar-width: thin;
+
+    > code {
+      background: rgba(99, 99, 99, 0.07);
+      color: var(--secondary-color);
+    }
 
     &::-webkit-scrollbar {
       width: 10px;
